welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:47: error: ';' expected but 'else' found.
      }else{
       ^